Rewrite internal sites to use user scripts instead of embedded code

It is no longer needed to setup web channel on unsafe js world
for internal pages, and thus it fixes issue where registering web
channel could fail in some cases.

BUG: 391875
FIXED-IN: 3.0.1